@@ -1424,132 +1424,165 @@ double _Te_from_rhok_EoverN(spec_t rhok, double EoverN){
  * k_kl, kb_lk in m^3/s 
  * e_kl, e_lk in Joule */
 static double _ke_kl_N2vib_from_Te(long k, double Te) {
-  double ke_kl, Te_data[14], ke_kl_data[14]; 
+  double ke_kl, Te_data[18], ke_kl_data[18]; 
   switch (k){
     case 1: 
       /* Te */
-      Te_data[0] =  618.908000328523;
-      Te_data[1] =  2262.88237620116;
-      Te_data[2] =  3371.50133178963;
-      Te_data[3] =  4438.34399735592;
-      Te_data[4] =  6282.68983833492;
-      Te_data[5] =  8943.22060474715;
-      Te_data[6] =  19696.7471104552;
-      Te_data[7] =  28887.5309153338;
-      Te_data[8] =  37250.5252697730;
-      Te_data[9] =  45319.5383240561;
-      Te_data[10] = 62679.9077332711;
-      Te_data[11] = 156506.360583075;
-      Te_data[12] = 373510.978198263;
-      Te_data[13] = 1059879.95056260;
+      Te_data[0] =  453.272746740602;
+      Te_data[1] =  473.580665501381;
+      Te_data[2] =  596.356540066552;
+      Te_data[3] =  4862.29597758096;
+      Te_data[4] =  5738.43761554602;
+      Te_data[5] =  7619.53111904452;
+      Te_data[6] =  8503.79592451390;
+      Te_data[7] =  9294.06407743338;
+      Te_data[8] =  9967.12652779065;
+      Te_data[9] =  10521.8228230851;
+      Te_data[10] = 10974.3992983253;
+      Te_data[11] = 11343.4231935212;
+      Te_data[12] = 11650.9431061844;
+      Te_data[13] = 11941.0562313384;
+      Te_data[14] = 12242.7738814986;
+      Te_data[15] = 12637.3277317080;
+      Te_data[16] = 35486.6374688367;
+      Te_data[17] = 1197586.98063569;
       /* sum_l(k_kl*e_kl) */
-      ke_kl_data[0] =   8.91699416535870e-42;
-      ke_kl_data[1] =  -1.70432917313655e-36;
-      ke_kl_data[2] =   1.37357807186088e-36;
-      ke_kl_data[3] =   1.43680797272169e-35;
-      ke_kl_data[4] =   6.71910422618799e-35;
-      ke_kl_data[5] =   1.72383551343784e-34;
-      ke_kl_data[6] =   3.49340836324648e-34;
-      ke_kl_data[7] =   3.53621371637705e-34;
-      ke_kl_data[8] =   3.21752476210811e-34;
-      ke_kl_data[9] =   2.81368172191871e-34;
-      ke_kl_data[10] =  2.00034236128683e-34;
-      ke_kl_data[11] =  1.57846121546353e-35;
-      ke_kl_data[12] = -5.40441736086305e-35;
-      ke_kl_data[13] = -6.84031145203270e-35;
+      ke_kl_data[0] =  -4.86461141332565e-37;
+      ke_kl_data[1] =  -4.98076150641229e-37;
+      ke_kl_data[2] =  -5.62650495914362e-37;
+      ke_kl_data[3] =  -2.58460927072883e-36;
+      ke_kl_data[4] =  -4.08617385980396e-36;
+      ke_kl_data[5] =  -1.77669135435666e-35;
+      ke_kl_data[6] =  -3.57521370061139e-35;
+      ke_kl_data[7] =  -6.21847794084093e-35;
+      ke_kl_data[8] =  -9.35956239883247e-35;
+      ke_kl_data[9] =  -1.24349282734422e-34;
+      ke_kl_data[10] = -1.48591106317528e-34;
+      ke_kl_data[11] = -1.60954750818161e-34;
+      ke_kl_data[12] = -1.56609433563079e-34;
+      ke_kl_data[13] = -1.28275280384589e-34;
+      ke_kl_data[14] = -6.87187613624587e-35;
+      ke_kl_data[15] = 3.23439899198144e-35;
+      ke_kl_data[16] = 1.68484532258868e-33;
+      ke_kl_data[17] = 4.31279830067789e-31;
+      
     break; 
     case 2: 
-      Te_data[0] =  618.908000328523;
-      Te_data[1] =  2262.88237620116;
-      Te_data[2] =  3371.50133178963;
-      Te_data[3] =  4438.34399735592;
-      Te_data[4] =  6282.68983833492;
-      Te_data[5] =  8943.22060474715;
-      Te_data[6] =  19696.7471104552;
-      Te_data[7] =  28887.5309153338;
-      Te_data[8] =  37250.5252697730;
-      Te_data[9] =  45319.5383240561;
-      Te_data[10] = 62679.9077332711;
-      Te_data[11] = 156506.360583075;
-      Te_data[12] = 373510.978198263;
-      Te_data[13] = 1059879.95056260;
+      Te_data[0] =  453.272746740602;
+      Te_data[1] =  473.580665501381;
+      Te_data[2] =  1934.47431852684;
+      Te_data[3] =  3495.28293185533;
+      Te_data[4] =  4862.29597758096;
+      Te_data[5] =  7619.53111904452;
+      Te_data[6] =  10521.8228230851;
+      Te_data[7] =  10974.3992983253;
+      Te_data[8] =  11343.4231935212;
+      Te_data[9] =  11650.9431061844;
+      Te_data[10] = 11941.0562313384;
+      Te_data[11] = 12242.7738814986;
+      Te_data[12] = 12637.3277317080;
+      Te_data[13] = 13507.6671071700;
+      Te_data[14] = 35486.6374688367;
+      Te_data[15] = 65147.8033845811;
+      Te_data[16] = 109430.670808087;
+      Te_data[17] = 1197586.98063569;
 
-      ke_kl_data[0] =  -1.01257563268800e-43;
-      ke_kl_data[1] =  -1.29299691848918e-35;
-      ke_kl_data[2] =  -7.70935673183447e-35;
-      ke_kl_data[3] =  -1.80171427548097e-34;
-      ke_kl_data[4] =  -3.62237717357694e-34;
-      ke_kl_data[5] =  -4.92662265377810e-34;
-      ke_kl_data[6] =  -4.06897910377454e-34;
-      ke_kl_data[7] =  -2.82188326410815e-34;
-      ke_kl_data[8] =  -1.95617115257576e-34;
-      ke_kl_data[9] =  -1.36113556812124e-34;
-      ke_kl_data[10] = -6.43003150699854e-35;
-      ke_kl_data[11] = -6.22254963289554e-36;
-      ke_kl_data[12] = -8.63653314557700e-37;
-      ke_kl_data[13] =  2.28995901944352e-37;
+      ke_kl_data[0] =  -1.10653242948939e-36;
+      ke_kl_data[1] =  -1.10294257457745e-36;
+      ke_kl_data[2] =  -1.02980937403351e-36;
+      ke_kl_data[3] =  -4.63133093282915e-37;
+      ke_kl_data[4] =  -7.54768176632938e-36;
+      ke_kl_data[5] =  -1.83350178450952e-34;
+      ke_kl_data[6] =  -7.04624018719801e-34;
+      ke_kl_data[7] =  -7.76006029801873e-34;
+      ke_kl_data[8] =  -8.10109636194007e-34;
+      ke_kl_data[9] =  -8.05710184933610e-34;
+      ke_kl_data[10] = -7.55639548470422e-34;
+      ke_kl_data[11] = -6.54153496369912e-34;
+      ke_kl_data[12] = -4.92896219361738e-34;
+      ke_kl_data[13] = -2.50489376395735e-34;
+      ke_kl_data[14] = 1.72083057828894e-33;
+      ke_kl_data[15] = 4.76338443560920e-33;
+      ke_kl_data[16] = 1.34402593410068e-32;
+      ke_kl_data[17] = 2.43444371922711e-31;
     break;
     case 3: 
-      Te_data[0] =  618.908000328523;
-      Te_data[1] =  2262.88237620116;
-      Te_data[2] =  3371.50133178963;
-      Te_data[3] =  4438.34399735592;
-      Te_data[4] =  6282.68983833492;
-      Te_data[5] =  12269.8511065130;
-      Te_data[6] =  19696.7471104552;
-      Te_data[7] =  28887.5309153338;
-      Te_data[8] =  37250.5252697730;
-      Te_data[9] =  45319.5383240561;
-      Te_data[10] = 62679.9077332711;
-      Te_data[11] = 156506.360583075;
-      Te_data[12] = 373510.978198263;
-      Te_data[13] = 1059879.95056260;
+      Te_data[0] =  453.272746740602;
+      Te_data[1] =  1298.54634818928;
+      Te_data[2] =  2128.26988612971;
+      Te_data[3] =  2360.36038625290;
+      Te_data[4] =  3495.28293185533;
+      Te_data[5] =  7619.53111904452;
+      Te_data[6] =  10521.8228230851;
+      Te_data[7] =  10974.3992983253;
+      Te_data[8] =  11343.4231935212;
+      Te_data[9] =  11650.9431061844;
+      Te_data[10] = 11941.0562313384;
+      Te_data[11] = 12242.7738814986;
+      Te_data[12] = 12637.3277317080;
+      Te_data[13] = 13507.6671071700;
+      Te_data[14] = 35486.6374688367;
+      Te_data[15] = 65147.8033845811;
+      Te_data[16] = 109430.670808087;
+      Te_data[17] = 1197586.98063569;
 
-      ke_kl_data[0] =  -9.02458032633180e-42;
-      ke_kl_data[1] =  -5.06243404007705e-35;
-      ke_kl_data[2] =  -2.30178356365543e-34;
-      ke_kl_data[3] =  -4.69510780972978e-34;
-      ke_kl_data[4] =  -8.52275296973685e-34;
-      ke_kl_data[5] =  -1.19595436150910e-33;
-      ke_kl_data[6] =  -1.05864013352746e-33;
-      ke_kl_data[7] =  -8.25496196277683e-34;
-      ke_kl_data[8] =  -6.40319504837904e-34;
-      ke_kl_data[9] =  -4.99215968899187e-34;
-      ke_kl_data[10] = -3.04855600993321e-34;
-      ke_kl_data[11] = -7.33050444278219e-35;
-      ke_kl_data[12] = -2.24841457932390e-35;
-      ke_kl_data[13] = -5.95457117126933e-36;
+      ke_kl_data[0] =  -1.68278653054403e-36;
+      ke_kl_data[1] =  -1.65044105671289e-36;
+      ke_kl_data[2] =  -1.56643993273029e-36;
+      ke_kl_data[3] =  -1.60969525581726e-36;
+      ke_kl_data[4] =  -2.94991660167004e-35;
+      ke_kl_data[5] =  -6.72518362456381e-34;
+      ke_kl_data[6] =  -1.33258150798402e-33;
+      ke_kl_data[7] =  -1.40745510060680e-33;
+      ke_kl_data[8] =  -1.44925135354570e-33;
+      ke_kl_data[9] =  -1.46253925528182e-33;
+      ke_kl_data[10] = -1.44540570280778e-33;
+      ke_kl_data[11] = -1.39919319753893e-33;
+      ke_kl_data[12] = -1.31990910366153e-33;
+      ke_kl_data[13] = -1.18174926099218e-33;
+      ke_kl_data[14] = 7.05827881918222e-34;
+      ke_kl_data[15] = 4.48475700124146e-33;
+      ke_kl_data[16] = 1.94971739876087e-32;
+      ke_kl_data[17] = 4.31346415830453e-31;
     break;
     case 4: 
-      Te_data[0] =  618.908000328523;
-      Te_data[1] =  2262.88237620116;
-      Te_data[2] =  3371.50133178963;
-      Te_data[3] =  4438.34399735592;
-      Te_data[4] =  6282.68983833492;
-      Te_data[5] =  12269.8511065130;
-      Te_data[6] =  19696.7471104552;
-      Te_data[7] =  28887.5309153338;
-      Te_data[8] =  37250.5252697730;
-      Te_data[9] =  45319.5383240561;
-      Te_data[10] = 62679.9077332711;
-      Te_data[11] = 156506.360583075;
-      Te_data[12] = 373510.978198263;
-      Te_data[13] = 1059879.95056260;
+      Te_data[0] =  453.272746740602;
+      Te_data[1] =  1298.54634818928;
+      Te_data[2] =  1934.47431852684;
+      Te_data[3] =  2360.36038625290;
+      Te_data[4] =  2649.31305890628;
+      Te_data[5] =  3018.33695410216;
+      Te_data[6] =  4106.84139967995;
+      Te_data[7] =  7619.53111904452;
+      Te_data[8] =  10521.8228230851;
+      Te_data[9] =  10974.3992983253;
+      Te_data[10] = 11343.4231935212;
+      Te_data[11] = 11650.9431061844;
+      Te_data[12] = 11941.0562313384;
+      Te_data[13] = 12242.7738814986;
+      Te_data[14] = 35486.6374688367;
+      Te_data[15] = 65147.8033845811;
+      Te_data[16] = 277000.011897034;
+      Te_data[17] = 1197586.98063569;
 
-      ke_kl_data[0] =  -1.78213311353088e-41;
-      ke_kl_data[1] =  -1.29077325753885e-34;
-      ke_kl_data[2] =  -4.53261377376819e-34;
-      ke_kl_data[3] =  -8.15407930884039e-34;
-      ke_kl_data[4] =  -1.33123734995416e-33;
-      ke_kl_data[5] =  -1.75979076036975e-33;
-      ke_kl_data[6] =  -1.57887617921174e-33;
-      ke_kl_data[7] =  -1.26480934431422e-33;
-      ke_kl_data[8] =  -1.00712743104408e-33;
-      ke_kl_data[9] =  -8.05337609868695e-34;
-      ke_kl_data[10] = -5.17348875324510e-34;
-      ke_kl_data[11] = -1.39626681561028e-34;
-      ke_kl_data[12] = -4.58876413673634e-35;
-      ke_kl_data[13] = -1.41882305935205e-35;
+      ke_kl_data[0] =  -2.12654432143955e-36;
+      ke_kl_data[1] =  -2.18383001001386e-36;
+      ke_kl_data[2] =  -2.14228039882260e-36;
+      ke_kl_data[3] =  -3.00322794069594e-36;
+      ke_kl_data[4] =  -8.50800916541815e-36;
+      ke_kl_data[5] =  -3.18756477239895e-35;
+      ke_kl_data[6] =  -2.21107736817862e-34;
+      ke_kl_data[7] =  -1.20373906470899e-33;
+      ke_kl_data[8] =  -1.81584873736952e-33;
+      ke_kl_data[9] =  -1.86680100416046e-33;
+      ke_kl_data[10] = -1.89187380191707e-33;
+      ke_kl_data[11] = -1.89657365601657e-33;
+      ke_kl_data[12] = -1.88089517101316e-33;
+      ke_kl_data[13] = -1.84648776600282e-33;
+      ke_kl_data[14] = 3.85746110640400e-34;
+      ke_kl_data[15] = 4.31308646976946e-33;
+      ke_kl_data[16] = 1.30380992218666e-31;
+      ke_kl_data[17] = 4.31341164687227e-31;
     break;
     default:
       fatal_error("kth N2vib process level in _ke_kl_from_Te() set to invalid value.");
