@@ -7,6 +7,11 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2025 FEB 17a
+  * in model/thermo/_generic/electronimpact.c
+    - in _ke_kl_N2vib_from_Te(), improved the curve fits
+    
+
 2025 FEB 06b
   * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
     - in find_dSe_dU_transport_Rodriguez2025(), fixed a bug (missing ; at end of line)
